# iotsploit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  console.py  hydra.restore  manage.py  pyproject.toml  requirements.txt  sat_server.service  sat_shell.py  sat_ui.service  start_sat_server.sh  start_sat_ui.sh
conf/: devices.json  target.json
db_backup/: 20231213_2245.json  ui_data_export.json  vehicle_profile.json
firmware/: firmware_manifest.json
plugins/devices/: usb_a.py
plugins/devices/socketcan/: drv_socketcan.py  pyproject.toml
plugins/devices/socketcan/drv_socketcan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
plugins/exploits/: ftdi_echo.py  greatfet_echo.py  greatfet_rubber_duck.py  hydra_ssh_attack.py  plugin_adb.py  plugin_exploit_usb.py  plugin_ssh.py  simple_rubber_duck.py  uart_brute_attack.py
sat_django_entry/: asgi.py  settings.py  urls.py  wsgi.py
sat_scripts/: wait_start_sattest.sh
sat_scripts/mitm/: dnssniffer  mitm_result.py  start_nogotofail.sh
sat_scripts/python/: clear_route.py  ip_port_scan.py  user_confirm.py  wifi_mitm_attack.py
sat_toolkit/: admin.py  apps.py  asgi.py  celery.py  config.py  consumers.py  routing.py  tasks.py  urls.py  views.py
sat_toolkit/core/: base_plugin.py  device_config.py  device_manager.py  device_registry.py  device_scanner.py  device_spec.py  device_store.py  exploit_manager.py  exploit_spec.py  plugin_manager.py  shell.py  stream_manager.py
sat_toolkit/models/: ClassifiedInfo_Model.py  Device_Model.py  DoIP_Diagnostic_Database_Model.py  PassCondition_Model.py  PluginGroupTree_Model.py  PluginGroup_Model.py  PluginSequence_Model.py  Plugin_Model.py  Target_Model.py  TestCase_Model.py  TestGroup_Model.py  TestStands_Model.py  (+7 more)
scripts/: ss_static
tests/: colortest.py  command.py  merge.py  test.py  ut_group_test.py
(+206 files in other folders)
