[tool.poetry]
name = "sat-toolkit"
version = "0.1.0"
description = "Iotsploit Toolkit"
authors = ["tk"]

[tool.poetry.dependencies]
python = "^3.8"
annotated-types = "0.7.0"
anyio = "4.4.0"
arrow = "1.3.0"
asgiref = "3.8.1"
attrs = "23.2.0"
bcrypt = "4.1.3"
binaryornot = "0.4.4"
capstone = "5.0.1"
certifi = "2024.7.4"
cffi = "1.16.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cmd2 = "2.4.3"
colored-traceback = "0.4.2"
colorlog = "6.8.2"
cookiecutter = "2.6.0"
cryptography = "43.0.0"
Django = "4.2.14"
django-cors-headers = "4.4.0"
django-extensions = "3.2.3"
django_csp = "3.8"
channels = "4.1.0"
mistune = "3.0.2"
SQLAlchemy = "2.0.34"
pluggy = "1.5.0"
pyftdi = "0.55.4"
PyLink = "0.3.3"
daphne = "4.1.2"
netifaces = "0.11.0"
pywifi = "1.1.12"
pwntools = "4.12.0"
fastapi = "0.112.1"
flet = "0.23.2"
flet-core = "0.23.2"
flet-runtime = "0.23.2"
elevate = "0.1.3"
# ... (other dependencies)

[tool.poetry.dev-dependencies]
flood_attack = {path = "plugins/exploits/flood_attack", develop = true}
esp32_driver = {path = "plugins/devices/esp32", develop = true}
# ... other plugin dependencies ...

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

